@@ -42,8 +42,8 @@ public class OptimizedScalarQuantizerBenchmark {
     int dims;
 
     float[] vector;
+    float[] scratch;
     float[] centroid;
-    byte[] legacyDestination;
     int[] destination;
 
     @Param({ "1", "4", "7" })
@@ -55,10 +55,10 @@ public class OptimizedScalarQuantizerBenchmark {
     public void init() {
         ThreadLocalRandom random = ThreadLocalRandom.current();
         // random byte arrays for binary methods
-        legacyDestination = new byte[dims];
         destination = new int[dims];
         vector = new float[dims];
         centroid = new float[dims];
+        scratch = new float[dims];
         for (int i = 0; i < dims; ++i) {
             vector[i] = random.nextFloat();
             centroid[i] = random.nextFloat();
@@ -66,22 +66,15 @@ public class OptimizedScalarQuantizerBenchmark {
     }
 
     @Benchmark
-    public byte[] scalar() {
-        osq.legacyScalarQuantize(vector, legacyDestination, bits, centroid);
-        return legacyDestination;
-    }
-
-    @Benchmark
-    @Fork(jvmArgsPrepend = { "--add-modules=jdk.incubator.vector" })
-    public byte[] legacyVector() {
-        osq.legacyScalarQuantize(vector, legacyDestination, bits, centroid);
-        return legacyDestination;
+    public int[] scalar() {
+        osq.scalarQuantize(vector, scratch, destination, bits, centroid);
+        return destination;
     }
 
     @Benchmark
     @Fork(jvmArgsPrepend = { "--add-modules=jdk.incubator.vector" })
     public int[] vector() {
-        osq.scalarQuantize(vector, destination, bits, centroid);
+        osq.scalarQuantize(vector, scratch, destination, bits, centroid);
         return destination;
     }
 }
